--- a/seminario.bib
+++ b/seminario.bib
@@ -679,6 +679,16 @@ pages={1282},
 	publisher={IOP Publishing}
 }
 
+@article{dell2012pisa,
+	title={The pisa stellar evolution data base for low-mass stars},
+	author={Dell’Omodarme, M and Valle, Giada and Degl’Innocenti, Scilla and Moroni, PG Prada},
+	journal={Astronomy \& Astrophysics},
+	volume={540},
+	pages={A26},
+	year={2012},
+	publisher={EDP Sciences}
+}
+
 @article{ribas2005evolution,
 	title={Evolution of the solar activity over time and effects on planetary atmospheres. I. High-energy irradiances (1-1700 {\AA})},
 	author={Ribas, Ignasi and Guinan, Edward F and G{\"u}del, Manuel and Audard, Marc},
