ended rev luglio 19

--- a/GFMresult.tex
+++ b/GFMresult.tex
@@ -38,7 +38,7 @@ Le popolazioni planetarie sintetiche sono costruite partendo dalla fase finale d
 \begin{figure}[!ht]
 	\begin{subfigure}{0.5\textwidth}
 		\includegraphics[trim={0cm 10cm 0 0},clip, keepaspectratio,width=0.99\textwidth]{initdistro}
-		\caption{Distribuzione caratteristiche dischi di accrescimento: Metallicit\'a, Massa del disco, Massa della componente solida, frazione di stelle che mantengono disco di accrescimento in funzione dell'et\'a dell'ammasso. Da \cite{mordasini2018planetary}.}\label{fig:initdistro}
+		\caption{Distribuzione caratteristiche dischi di accrescimento: metallicit\'a, massa del disco di accrescimento, massa della componente solida, frazione di stelle che mantengono disco di accrescimento in funzione dell'et\'a dell'ammasso. Da \cite{mordasini2018planetary}.}\label{fig:initdistro}
 	\end{subfigure}
 	\begin{subfigure}{0.5\textwidth}
 		\includegraphics[trim={9cm 5.5cm 10cm 0.5cm},clip, keepaspectratio, width=0.99\textwidth]{GFM}
@@ -53,7 +53,7 @@ Le popolazioni planetarie sintetiche sono costruite partendo dalla fase finale d
 	\caption{Distribuzione di stelle che ospitano pianeti giganti ($M\geq300\mearth{}$) in funzione della metallicit\'a. Nero: popolazione sintetica. Blu: fit da osservazioni (\cite{mortier2013functional}). Da \cite{mordasini2018planetary}. }\label{fig:giant-Zsynth}
 \end{wrapfigure}
 
-Le caratteristiche del disco protoplanetario determina la rapidit\'a di accrescimento degli embrioni planetari  principalmente tramite la densit\'a di planetesimi: posizione dell'iceline ($H_2O$) fissa \'e coerente con approssimazione di trasformazione totalit\'a componente solida in planetesimi. La figura (\subref{fig:initdistro}) mostra la distribuzioni delle principali condizioni iniziali per la simulazione. La probabilit\'a di formare pianeti giganti aumenta con la metallicit\'a: la figura (\ref{fig:giant-Zsynth}) mostra che l'incremento relativo \'e in accordo con le osservazioni.
+Le caratteristiche del disco protoplanetario determinano la rapidit\'a di accrescimento degli embrioni planetari  principalmente tramite la densit\'a di planetesimi: posizione dell'iceline ($H_2O$) fissa \'e coerente con approssimazione di trasformazione totalit\'a componente solida in planetesimi. La figura (\subref{fig:initdistro}) mostra la distribuzioni delle principali condizioni iniziali per la simulazione. La probabilit\'a di formare pianeti giganti aumenta con la metallicit\'a: la figura (\ref{fig:giant-Zsynth}) mostra che l'incremento relativo \'e in accordo con le osservazioni.
 \'E possibile tenere traccia della frazione di rocce o ghiacci accresciuti: la figura (\ref{fig:MR5Gyrppsobs}) mostra la posizione nel diagramma massa-raggio di una popolazione sintetica sovrapposta a quella di pianeti reali. La fase di contrazione post-formazione \'e determinata considerando l'evoluzione dell'irraggiamento stellare e l'evaporazione dovuta a componente energetica della radiazione stellare.
 
 %LBRT
@@ -70,7 +70,7 @@ Characterization of exoplanets from their formation I:  radii pg 15
 %Lo scambio di momento angolare dovuto all'interazione gravitazionale tra disco e pianeta provoca la migrazione planetaria 
 
 Se l'embrione planetario accresce abbastanza massa si forma un inviluppo gassoso; nella figura (\ref{fig:envelopecoresynth}) la linea continua rappresenta un fit della dipendenza della massa dell'inviluppo gassoso vs massa del core solido per la popolazione sintetica: per opacit\'a $\num{0.003}\kappa_{gr}$, dove $\kappa_{gr}$ \'e l'opacit\'a dei grani dell'ISM (\cite{mordasini2014grain}), si ha $M_e\propto M_c\expy{2.5}$.
-La massa critica per accrescimento runaway \'e fra $\numrange{5}{20}\mearth{}$ quindi, se il core dell'embrione planetario raggiunge questa massa si ha rapido accrescimento del gas disponibile nel disco di accrescimento fino alla creazione di un gap attorno all'orbita del pianeta: in questo regime l'accrescimento di gas \'e regolato da evoluzione viscosa del disco. La rapidit\'a dell'accrescimento runaway rispetto ai tempi di evoluzione del disco protoplanetario determinano uno spopolamento della regione di massa compresa tra la massa critica e la massa raggiunta dalla popolazione dei giganti gassosi.
+La massa critica per accrescimento runaway \'e fra $\numrange{5}{20}\mearth{}$ quindi, se il core dell'embrione planetario raggiunge questa massa si ha rapido accrescimento del gas disponibile nel disco di accrescimento fino alla creazione di un gap attorno all'orbita del pianeta: in questo regime l'accrescimento di gas \'e regolato da evoluzione viscosa del disco di accrescimento. La rapidit\'a dell'accrescimento runaway rispetto ai tempi di evoluzione del disco protoplanetario determinano uno spopolamento della regione di massa compresa tra la massa critica e la massa raggiunta dalla popolazione dei giganti gassosi.
 
 %la struttura del pianeta \'e quindi determinata da massa, raggio e luminosit\'a del core, massa gassosa legata al pianeta, energia rilasciata da accrescimento planetesimi e gas.
 
@@ -145,8 +145,8 @@ La posizione di Nettuno e Saturno nella figura (\subref{fig:ma-synth}) suggerisc
 
 Alcune caratteristiche dell'ensemble sintetico: %(\cite{mordasini2018planetary}):
 \begin{itemize}
-\item Numerosi sistemi costituiti da pianeti di piccola massa (\numrange{0.1}{10}$\mearth{}$): dischi protoplanetari con bassa densit\'a superficiale e corto tempo di vita ma anche alta metallicit\'a; i sistemi sono caratterizzati da scarsa migrazione e interazione dinamica.
-\item Sistemi con pianeti di piccola massa e giganti. Sistemi che mimano il sistema solare con andamento di massa piccolo-massiccio-piccolo: infatti all'interno si ha scarsa disponibilit\'a di componente solida, sweet spot per formazione di pianeti giganti \'e all'esterno dell'ice-line, e oltre l'accrescimento \'e lento. Numero di pianeti giganti da 1 a 5 con il pi\'u interno attorno a \SI{1}{\astronomicalunit}: l'architettura dei pianeti giganti varia notevolmente, l'eccentricit\'a \'e nel range tra $e=\numrange{0}{2}$.
+\item Numerosi sistemi costituiti da pianeti di piccola massa (\numrange{0.1}{10}$\mearth{}$): prodotti da dischi protoplanetari con bassa densit\'a superficiale e corto tempo di vita ma anche alta metallicit\'a; i sistemi sono caratterizzati da scarsa migrazione e interazione dinamica.
+\item Sistemi con pianeti di piccola massa e giganti. Sistemi che mimano il sistema solare con andamento di massa piccolo-massiccio-piccolo: all'interno si ha scarsa disponibilit\'a di componente solida, sweet spot per formazione di pianeti giganti \'e all'esterno dell'ice-line, e oltre l'accrescimento \'e lento. Numero di pianeti giganti da 1 a 5 con il pi\'u interno attorno a \SI{1}{\astronomicalunit}: l'architettura dei pianeti giganti varia notevolmente, l'eccentricit\'a \'e nel range tra $e=\numrange{0}{2}$.
 \item Piccola percentuale di sistemi con un pianeta gigante superstite di scattering tra pianeti giganti vicini. Sistemi rari formati in dischi massicci con alta metallicit\'a. Tipicamente $M_p\approx30\mjupiter{}$, $a\approx\SIrange{20}{50}{\astronomicalunit}$.
 %\item Popolazione di pianeti tra $\numrange{30}{100}\mearth{}$: i fattori che influenzano la popolazione di pianeti di massa intermedia sono la massa presente nel disco quando il protopianeta raggiunge la massa critica per accrescimento di gas, il tempo-scala di rilassamento radiativo e competizione per accrescimento di gas tra protopianeti giganti.
 \end{itemize}
@@ -157,7 +157,7 @@ Alcune caratteristiche dell'ensemble sintetico: %(\cite{mordasini2018planetary})
 	\caption{Distribuzione della popolazione sintetica planetaria nel diagramma semiasse maggiore vs raggio. Da \cite{mordasini2018planetary}.}\label{fig:Ra-synth}
 \end{figure}
 
-In figura (\subref{fig:ma-synth}) e (\ref{fig:Ra-synth}) \'e evidente l'effetto della migrazione: popolazione pianeti in origine nettuniani (frazione giaccio nel core $50\%$) che migrano all'interno accumulando materiale roccioso (frazione ghiaccio nel core $10-20\%$). Inoltre nel diagramma semiasse maggiore vs raggio si confronta fit sperimentale della ''valle dell'evaporazione'' (\cite{van2018asteroseismic}) con la fascia depopolata decrescente fino a \SI{1}{\astronomicalunit} che viste le semplificazioni del modello di evaporazione risulta pi\'u ripida.
+In figura (\subref{fig:ma-synth}) e (\ref{fig:Ra-synth}) \'e evidente l'effetto della migrazione: popolazione pianeti in origine nettuniani (frazione giaccio nel core $50\%$) che migrano all'interno accumulando materiale roccioso (frazione ghiaccio nel core $10-20\%$). Inoltre nel diagramma semiasse maggiore vs raggio si confronta fit da dati osservativi della ''valle dell'evaporazione'' (\cite{van2018asteroseismic}) con la fascia depopolata decrescente fino a \SI{1}{\astronomicalunit} che, viste le semplificazioni del modello di evaporazione, risulta pi\'u ripida.
 
 \clearpage
 
@@ -175,7 +175,7 @@ Si ha un minimo locale attorno alla massa critica dopo di che l'aumento di massa
 
 La distribuzione del raggio dei pianeti mostra picco a $1\rjupiter$ e crescita per piccoli raggi dovuta alla prevalenza di pianeti di piccola massa, al loro lungo $\tkh{}$ e quindi scarso accrescimento di H/He.
 
-La distribuzione dei semi-assi cresce rapidamente tra $0.01-0.1\si{\astronomicalunit}$, resta uniforme in log tra $0.1-10\si{\astronomicalunit}$ nonostante molti pianeti migrino all'interno,mentre i pianeti giganti sono ristretti in \SIrange{0.1}{6}{\astronomicalunit}. La distribuzioni del semiasse \'e approssimativamente uniforme in $\log{a}$ per pianeti con $1\mearth{}<M_p<30\mearth{}$: la non comparsa di strutture significative suggerisce che il risultato della simulazione in questo caso sia influenza dalla distribuzione iniziale. Altre distribuzioni iniziali iniziali proposte sono: formazione preferenziale di planetesimi in regioni del disco di accrescimento (\cite{drkazkowska2016close}), accumulo di solidi all'esterno di orbite di pianeti esistenti (\cite{pinilla2015sequential}), ''trappole'' planetarie (\cite{hasegawa2012evolutionary}).
+La distribuzione dei semi-assi cresce rapidamente tra $0.01-0.1\si{\astronomicalunit}$, resta uniforme in log tra $0.1-10\si{\astronomicalunit}$ nonostante molti pianeti migrino all'interno,mentre i pianeti giganti sono concentrati in \SIrange{0.1}{6}{\astronomicalunit}; inoltre \'e approssimativamente uniforme in $\log{a}$ per pianeti con $1\mearth{}<M_p<30\mearth{}$: la non comparsa di strutture significative suggerisce che il risultato della simulazione in questo caso sia influenzato dalla distribuzione iniziale. Altre distribuzioni iniziali ipotizzate sono: formazione preferenziale di planetesimi in regioni del disco di accrescimento (\cite{drkazkowska2016close}), accumulo di solidi all'esterno di orbite di pianeti esistenti (\cite{pinilla2015sequential}), ''trappole'' planetarie (\cite{hasegawa2012evolutionary}).
 
 %{\let\clearpage\relax\let\cleardoublepage\relax
 %\chapter{Confronto semi-quantitativo tra caratteristiche popolazioni sintetiche e osservate}
@@ -198,12 +198,12 @@ $\exv{S}$&18.0&54.0\\
 O&10-20&50-60\\
 \hline
 \end{tabular}
-\caption{Percentuale di stelle con N pianeti del dato tipo nella popolazione sintetica di \cite{mordasini2018planetary} e confronto con osservazioni.}\label{tab:planetfreq}
+\caption{Percentuale di stelle con N pianeti giganti e vicini alla stella nella popolazione sintetica di \cite{mordasini2018planetary} e confronto con osservazioni.}\label{tab:planetfreq}
 \end{table}
 
 La tabella (\ref{tab:planetfreq}) mostra un buon accordo tra teoria e osservazione per frequenza di pianeti giganti e sistemi compatti.
 
-In \cite{fig:MR-freq-obssynth} sono sovrapposte la distribuzione dei pianeti sintetici e osservati di massa e raggio. Si ha un discreto accordo della pendenza nei due regimi di accrescimento e della posizione della massa critica mentre per quanto riguarda la distribuzione dei raggi planetarii il picco a $1\rjupiter{}$ \'e meno pronunciato perch\'e sono inclusi solo pianeti giganti vicini.
+In (\ref{fig:MR-freq-obssynth}) sono sovrapposte la distribuzione dei pianeti sintetici e osservati di massa e raggio. Si ha un discreto accordo della pendenza nei due regimi di accrescimento e della posizione della massa critica mentre per quanto riguarda la distribuzione dei raggi planetarii il picco a $1\rjupiter{}$ \'e meno pronunciato perch\'e sono inclusi solo pianeti giganti vicini.
 %e la distribuzione sintetica cresce meno rapidamente a piccoli raggi.
 Infine il gran numero di pianeti terrestri della popolazione sintetica pu\'o collidere dando luogo a pianeti pi\'u massicci tuttavia le interazioni dinamiche sono simulate solo per il tempo di vita del disco.
 
